--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,10 +6,34 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      # =========================
+      # BACKEND BUILD
+      # =========================
+      - name: Install & build backend
+        working-directory: apps/api
+        run: |
+          npm install
+          npm run build
+
+      # =========================
+      # FRONTEND BUILD (INBOX)
+      # =========================
+      - name: Install & build inbox
+        working-directory: apps/inbox
+        run: |
+          npm install
+          npm run build
+
+      # =========================
+      # DEPLOY TO VPS
+      # =========================
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -22,43 +46,37 @@ jobs:
           script: |
             set -e
 
-            APP_DIR=/var/www/whatsapp-platform
-
             echo "📂 Entrando al repo"
             cd ${{ secrets.VPS_PATH }}
 
+            # Evitar error de ownership de git
             git config --global --add safe.directory ${{ secrets.VPS_PATH }}
 
             echo "🔄 Actualizando código"
             git pull origin main
 
-            echo "🔧 Backend (prod deps y build)"
-            cd apps/api
-            npm install --omit=dev
-            npm run build
-            
-            echo "📦 Copiando compilado del backend"
+            # =========================
+            # BACKEND DEPLOY
+            # =========================
+            echo "📦 Publicando backend"
             sudo mkdir -p /var/www/apps/whatsapp-api
             sudo rm -rf /var/www/apps/whatsapp-api/*
-            sudo cp -R dist/* /var/www/apps/whatsapp-api/
-            sudo cp ecosystem.config.js /var/www/apps/whatsapp-api/
-            sudo chown -R www-data:www-data /var/www/apps/whatsapp-api
-            
-            echo "🚀 Reiniciando aplicación"
+            sudo cp -R apps/api/dist/* /var/www/apps/whatsapp-api/
+            sudo cp apps/api/ecosystem.config.js /var/www/apps/whatsapp-api/
+            sudo chown -R deploy:deploy /var/www/apps/whatsapp-api
+
+            echo "🚀 Reiniciando backend"
             cd /var/www/apps/whatsapp-api
             pm2 restart whatsapp-api || pm2 start ecosystem.config.js
             pm2 save
 
-            echo "🎨 Build Inbox"
-            cd ${{ secrets.VPS_PATH }}/apps/inbox
-            export NG_CLI_ANALYTICS=false
-            npm install
-            npm run build
-
+            # =========================
+            # FRONTEND DEPLOY
+            # =========================
             echo "📦 Publicando Inbox"
             sudo mkdir -p /var/www/html/inbox
             sudo rm -rf /var/www/html/inbox/*
-            sudo cp -R dist/* /var/www/html/inbox
+            sudo cp -R apps/inbox/dist/* /var/www/html/inbox
             sudo chown -R www-data:www-data /var/www/html/inbox
 
             echo "✅ Despliegue completado"
